0x0B-malloc_free/3-alloc_grid.c:
lloc_grid.c:16:6: error: ‘withd’ undeclared (first use in this function)
   16 |  if (withd <= || height <= 0)
      |      ^~~~~
